# SC_Loop_ALPSCore

./: .gitignore  README.md
src/: CMakeLists.txt  band_structure.cpp  band_structure.hpp  bare_hamiltonian.cpp  bare_hamiltonian.hpp  chemical_potential.hpp  dmft_model.cpp  dmft_model.hpp  gf_base.cpp  gf_base.hpp  greens_function.cpp  greens_function.hpp  hybridization_function.cpp  hybridization_function.hpp  legendre.cpp  legendre.hpp  main.cpp  self_energy.cpp  self_energy.hpp  tail_manager.cpp  tail_manager.hpp
src/bse/: CMakeLists.txt  bseq_solver.cpp  bseq_solver.hpp  bubble.cpp  bubble.hpp  main.cpp
src/sc_loop/: CMakeLists.txt  hybridization_function.cpp  hybridization_function.hpp  main.cpp
src/shared_libs/: CMakeLists.txt  band_structure.cpp  band_structure.hpp  chemical_potential.hpp  cmd_line.cpp  cmd_line.hpp  dmft_model.cpp  dmft_model.hpp  flavor_transformer.cpp  flavor_transformer.hpp  gf_base.cpp  gf_base.hpp  greens_function.cpp  greens_function.hpp  legendre.cpp  legendre.hpp  self_energy.cpp  self_energy.hpp  tail_manager.cpp  tail_manager.hpp
test/1site/ch0.05/even/dope0.7/b60/real/: c_delta_0.h5  crystal_field.h5  input.ini  u_pd.h5
test/1site/ch0/even/dope1.6/b22/real/: G1_LEGENDRE.txt  blocks.h5  c_delta_0.h5  c_gw  crystal_field.h5  ec_delta.txt  gw  gw.out  input.ini  symmetry.h5
